-
Type:
Bug
-
Resolution: Fixed
-
Priority:
P4
-
Affects Version/s: 12
-
Component/s: hotspot
-
b17
jdk/src/hotspot/share/runtime/perfData.cpp
593PerfData* PerfDataList::find_by_name(const char* name) {
594
595 // if add_item hasn't been called the list won't be initialized
596 if (this == NULL)
597 return NULL;
jdk/src/hotspot/share/oops/symbol.cpp
295void Symbol::print_on(outputStream* st) const {
296 if (this == NULL) {
297 st->print_cr("NULL");
308void Symbol::print_value_on(outputStream* st) const {
309 if (this == NULL) {
310 st->print("NULL");
src/hotspot/os/linux/osThread_linux.cpp: assert(this != NULL, "check");
src/hotspot/os/aix/osThread_aix.cpp: assert(this != NULL, "check");
src/hotspot/os/bsd/osThread_bsd.cpp: assert(this != NULL, "check");
- duplicates
-
JDK-8209079 Clean up JVM code that compares 'this' to NULL
-
- Closed
-
- relates to
-
JDK-8208399 Metadata methods print_(value_)on_maybe_null() compare 'this' to NULL
-
- Resolved
-