8209087: Clean up runtime code that compares 'this' to NULL

Remove 'this' to NULL comparisons from methods and check if calling objects of these methods could be NULL.

Reviewed-by: lfoltan, gziemski